--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,37 +45,37 @@
         <div class="h_item">
           <p><%=temp1%>°</p>
           <p class="h_pop"><%=pop1%></p>
-          <img src="<%=link%>" alt="" srcset="">
+          <img src="<%=link1%>" alt="" srcset="">
           <p class="h_time"><%=time1%></p>
         </div>
         <div class="h_item">
           <p><%=temp2%>°</p>
           <p class="h_pop"><%=pop2%></p>
-          <img src="<%=link%>" alt="" srcset="">
+          <img src="<%=link2%>" alt="" srcset="">
           <p class="h_time"><%=time2%></p>
         </div>
         <div class="h_item">
           <p><%=temp3%>°</p>
           <p class="h_pop"><%=pop3%></p>
-          <img src="<%=link%>" alt="" srcset="">
+          <img src="<%=link3%>" alt="" srcset="">
           <p class="h_time"><%=time3%></p>
         </div>
         <div class="h_item">
           <p><%=temp4%>°</p>
           <p class="h_pop"><%=pop4%></p>
-          <img src="<%=link%>" alt="" srcset="">
+          <img src="<%=link4%>" alt="" srcset="">
           <p class="h_time"><%=time4%></p>
         </div>
         <div class="h_item">
           <p><%=temp5%>°</p>
           <p class="h_pop"><%=pop5%></p>
-          <img src="<%=link%>" alt="" srcset="">
+          <img src="<%=link5%>" alt="" srcset="">
           <p class="h_time"><%=time5%></p>
         </div>
         <div class="h_item">
           <p><%=temp6%>°</p>
           <p class="h_pop"><%=pop6%></p>
-          <img src="<%=link%>" alt="" srcset="">
+          <img src="<%=link6%>" alt="" srcset="">
           <p class="h_time"><%=time6%></p>
         </div>
       </div>
